# sockchat

./: .gitmodules  CMakeLists.txt  _commands.cpp  _functions.cpp  chat-handler.cpp  chat-handler.h  chat-server.sln  chat-server.vcxproj  cmd-handler.cpp  cmd-handler.h  config.h  log.cpp  log.h  main.cpp  main.h  md5.cpp  mysql.cpp  mysql.h  sc_funcs.cpp  sc_types.h  sockchat.sln  sockchat.vcxproj  sockchat.vcxproj.filters  sqlite.cpp  sqlite.h  udp-cryptor.cpp  udp-cryptor.h  udp-packet.cpp  udp-packet.h  udp-server.cpp  udp-server.h  udp-user.cpp  udp-user.h
